[package]
name = "my_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "=0.7.9"
tokio = { version = "1.0", features = ["full", "rt-multi-thread", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.6.2", features = ["fs"] }
http-body-util = "=0.1.2"
tracing = "=0.1.41"
tracing-subscriber = "=0.3.19"
tower-cookies = "=0.10.0"


[dev-dependencies]
anyhow = "1"
httpc-test = "0.1.1"